minio/hkoscon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hkoscon
  labels:
    app: minio
    account: hkoscon
    owner: hkoscon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: minio
      account: hkoscon
      owner: hkoscon
  template:
    metadata:
      labels:
        app: minio
        account: hkoscon
        owner: hkoscon
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2018-04-04T05-20-54Z
          commands:
          args:
            - gateway
            - azure
          ports:
            - containerPort: 9000
